- manifest 수정 - glup 키 경로 수정

--- a/src/config/chrome/manifest.json
+++ b/src/config/chrome/manifest.json
@@ -1,10 +1,12 @@
 {
   "name": "samsung-expert-academy-extension",
+  "short_name": "SEAe",
   "version": "$VERSION",
   "manifest_version": 2,
   "author": "SsangWoo",
   "description": "chrome extension for Samsung expert academy",
   "homepage_url": "https://github.com/tkddn204/samsung-expert-academy-extension",
+  "default_locale": "ko",
   "icons": {
     "128": "icons/icon128.png"
   },
