--- a/src/config/chrome/manifest.json
+++ b/src/config/chrome/manifest.json
@@ -10,7 +10,7 @@
     "128": "icons/icon128.png"
   },
   "permissions": [
-    "storage", "tabs", "*://*.swexpertacademy.com/main/*"
+    "storage", "tabs", "*://*.swexpertacademy.com/*"
   ],
   "optional_permissions": [
     "<all_urls>"
