--- a/package.json
+++ b/package.json
@@ -1,57 +1,58 @@
 {
-  "name": "samsung-expert-academy-extension",
-  "version": "0.1.12",
-  "private": true,
-  "main": "inject.js",
-  "devDependencies": {
-    "async": "~0.9.0",
-    "chromedriver": "^2.21.2",
-    "cryptiles": "^4.1.3",
-    "hawk": "^7.0.10",
-    "growl": "^1.10.5",
-    "crx": "^0.4.4",
-    "eslint": "^5.7.0",
-    "event-stream": "3.3.4",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "0.0.8",
-    "gulp-clean": "^0.3.1",
-    "gulp-concat": "*",
-    "gulp-crx-pack": "^1.0.1",
-    "gulp-cssmin": "^0.2.0",
-    "gulp-exit": "0.0.2",
-    "gulp-less": "^1.3.1",
-    "gulp-load-plugins": "^0.5.3",
-    "gulp-mocha": "2.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-preprocess": "^1.1.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-run": "^1.6.4",
-    "gulp-run-sequence": "*",
-    "gulp-uglify-es": "^1.0.4",
-    "gulp-util": "^2.2.20",
-    "gulp-zip": "^2.0.3",
-    "jpm": "^1.0.4",
-    "map-stream": "*",
-    "mocha": "2.0.1",
-    "request": "^2.88.0",
-    "selenium-webdriver": "2.44.0",
-    "starx": "~0.1.7",
-    "stream-series": "*",
-    "underscore": "~1.7.0",
-    "underscore.string": "~2.4.0"
-  },
-  "scripts": {
-    "start": "gulp",
-    "build": "gulp build",
-    "test": "gulp test",
-    "dist": "gulp dist --production"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "dependencies": {}
+    "name": "samsung-expert-academy-extension",
+    "version": "0.1.12",
+    "private": true,
+    "main": "inject.js",
+    "devDependencies": {
+        "async": "~0.9.0",
+        "chromedriver": "^2.21.2",
+        "crx": "^0.4.4",
+        "cryptiles": "^4.1.3",
+        "eslint": "^5.7.0",
+        "event-stream": "3.3.4",
+        "growl": "^1.10.5",
+        "gulp": "^4.0.0",
+        "gulp-autoprefixer": "0.0.8",
+        "gulp-clean": "^0.3.1",
+        "gulp-concat": "*",
+        "gulp-crx-pack": "^1.0.1",
+        "gulp-cssmin": "^0.2.0",
+        "gulp-exit": "0.0.2",
+        "gulp-less": "^1.3.1",
+        "gulp-mocha": "2.0.0",
+        "gulp-plumber": "^1.1.0",
+        "gulp-preprocess": "^1.1.1",
+        "gulp-replace": "^0.5.4",
+        "replace-ext": "^1.0.0",
+        "gulp-uglify-es": "^1.0.4",
+        "gulp-zip": "^2.0.3",
+        "hawk": "^7.0.10",
+        "jpm": "^1.0.4",
+        "map-stream": "*",
+        "merge-stream": "^1.0.1",
+        "minimist": "^1.2.0",
+        "mocha": "2.0.1",
+        "request": "^2.88.0",
+        "selenium-webdriver": "2.44.0",
+        "starx": "~0.1.7",
+        "stream-series": "*",
+        "through2": "^3.0.1",
+        "underscore": "~1.7.0",
+        "underscore.string": "~2.4.0"
+    },
+    "scripts": {
+        "start": "gulp",
+        "build": "gulp build",
+        "test": "gulp test",
+        "dist": "gulp dist --production"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ],
+    "dependencies": {
+        "global": "^4.3.2"
+    }
 }
