--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "samsung-expert-academy-extension",
-    "version": "0.1.13",
+    "version": "0.1.15",
     "private": true,
     "main": "inject.js",
     "devDependencies": {
@@ -23,7 +23,6 @@
         "gulp-plumber": "^1.1.0",
         "gulp-preprocess": "^1.1.1",
         "gulp-replace": "^0.5.4",
-        "replace-ext": "^1.0.0",
         "gulp-uglify-es": "^1.0.4",
         "gulp-zip": "^2.0.3",
         "hawk": "^7.0.10",
@@ -32,6 +31,7 @@
         "merge-stream": "^1.0.1",
         "minimist": "^1.2.0",
         "mocha": "2.0.1",
+        "replace-ext": "^1.0.0",
         "request": "^2.88.0",
         "selenium-webdriver": "2.44.0",
         "starx": "~0.1.7",
@@ -53,6 +53,7 @@
         "not op_mini all"
     ],
     "dependencies": {
-        "global": "^4.3.2"
+        "global": "^4.3.2",
+        "loadsh": "^0.0.4"
     }
 }
